--- a/projects/cat-scout.slim
+++ b/projects/cat-scout.slim
@@ -3,12 +3,16 @@ article.project.cat-scout
     h1.small-12.columns
       | CAT SCOUT
   .description.row.expanded
+    .watch-videos-container.small-6.small-offset-6.show-for-small-only.columns.text-right
+      a.watch-videos href="http://cat-scout.eeefff.org"
+        | Watch videos
     .small-12.medium-6.large-4.columns
       span
         | Series of video tutorials that demonstrate how to train your pet at home to get into a restricted area (using the headquarters of the Federal Security Service Lubyanka as a case study), to evade surveillance cameras, to surmount barriers and to go past police officers, at the same time disguising its true intentions.
-    .small-6.small-offset-6.medium-6.medium-offset-0.large-4.large-offset-4.columns.text-right
+    .medium-6.medium-offset-0.large-4.large-offset-4.columns.text-right.hide-for-small-only.show-for-medium-up
       a.watch-videos href="http://cat-scout.eeefff.org"
         | Watch videos
-  / .media.row.expanded
-  /   .small-12.columns
-  /     img src="/images/cat-scout/screenschot-1.png"
+  .description.row.expanded
+    .small-12.medium-6.large-4.columns
+      span
+        | Серия видеоуроков о том, как в домашних условиях обучить своего питомца проникать на охраняемую территорию (на примере Лубянки), обходить камеры наблюдения, преодолевать заграждения и проходить мимо сотрудников полиции, скрывая при этом свои истинные намерения.
