--- a/projects/obj.slim
+++ b/projects/obj.slim
@@ -3,13 +3,15 @@ article.project.obj
     h1.small-12.columns
       | OBJ | ОБЖ
   .description.row.expanded
-    .small-12.medium-6.large-4.columns
+    .small-12.medium-6.large-6.columns
       p
-        | 21 февраля начнется цикл семинаров о режимах безопасности в городе. На этих встречах участницы и участники смогут обменяться идеями, связанными с контролем и доступом, и помочь друг другу с их воплощением.
+        | ОБЖ – семинар о режимах безопасности в городе. На встрече участницы и участники обменялись идеями, связанными с контролем и доступом, и помогли друг другу с их воплощением.
       p
-        |Нахождение в пространстве города связано с попаданием в поле зрения системы контроля: камеры, охранники, турникеты и рамки металлоискателей — вся эта машинерия развернута в сторону каждого человека, а переход от наблюдения к подавлению может занимать минуты. «Пройдемте со мной» скажет вам охранник супермаркета и вы из объекта слежки превратитесь в объект следствия. Устройство города, как некой охраняемой зоны, жизнь в условиях перманентного комендантского часа и контрабандные методы борьбы с ним — вот о чем можно поговорить в рамках семинара.
+        | Нахождение в пространстве города связано с попаданием в поле зрения системы контроля с одной стороны – камеры, охранники, турникеты и рамки металлоискателей – и контроля над бытовыми приборами, наблюдения за другими людьми, с другой стороны.
       p
-        | На первой встрече запланирована серия выступлений и коротких лекций участниц и участников, в которых пойдет речь о проектах, над которыми они работают и/или о каких-то интересных им аспектах городской безопасности.
+        | «Пройдемте со мной» скажет вам человек в штатском и вы из объекта слежки превратитесь в объект следствия. На семинаре выступил анонимный следователь, рассказав о том, сколько и зачем хранятся данные о ваших автоперемещениях, как перестраивается омон на митингах и какова философия органов.
+      p
+        | Устройство города, как некой охраняемой зоны, жизнь в условиях перманентного комендантского часа и контрабандные методы борьбы с ним, умный дом и контроль над “своей территорией”, наблюдение за наблюдающими и как, в условиях патриархального города, вернуться с дискотеки живой  — вот о чем также удалось поговорить в рамках семинара.
     .schedule.small-12.medium-6.columns
       p.header
         | Программа семинара:
