--- a/css/_index.scss
+++ b/css/_index.scss
@@ -54,6 +54,12 @@ section.toc-wrapper {
   position: relative;
   height: 100%;
   min-height: 100%;
+  opacity: 100;
+
+  &.hidden {
+    opacity: 0;
+    animation: opacity 0.3s ease;
+  }
 
   ul.toc {
     @include vertical-center;
