--- a/templates/header.html
+++ b/templates/header.html
@@ -6,7 +6,10 @@
 <link href="/css/app.css" rel="stylesheet" type="text/css"  />
 
 <script type="text/javascript" src="/js/vendor/jquery.js"/>
+<script type="text/javascript" src="/js/vendor/jquery.mobile.custom.min.js"/>
 <script type="text/javascript" src="/js/vendor/modernizr.js"/>
 <script type="text/javascript" src="/js/vendor/what-input.js"/>
 <script type="text/javascript" src="/js/vendor/foundation.min.js"/>
+<script type="text/javascript" src="/js/vendor/lodash.min.js"/>
+<script type="text/javascript" src="/js/vendor/d3-queue.js"/>
 <script type="text/javascript" src="/js/app.js"/>
