--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     </h1>
   </header>
 
-  <section class="toc-wrapper">
+  <section class="toc-wrapper hidden">
     <ul class="toc">
       <li>
         <a href="https://paranoiapp.net">paranoiapp</a>
