changed psychodata layout

--- a/projects/psychodata.slim
+++ b/projects/psychodata.slim
@@ -82,7 +82,7 @@ article.project.psychodata
   /         button data-slide="7"
   /         button data-slide="8"
 
-  .media.row.small-up-1.expanded
+  .media.row.small-up-1.large-up-3.expanded
     .column
       img src="/images/psychodata/screenshot-1.png"
     .column
