--- a/css/_index.scss
+++ b/css/_index.scss
@@ -54,11 +54,14 @@ section.toc-wrapper {
   position: relative;
   height: 100%;
   min-height: 100%;
-  opacity: 100;
+  opacity: 1;
+  -webkit-transition: opacity 0.3s ease;
+  -moz-transition: opacity 0.3s ease;
+  -o-transition: opacity 0.3s ease;
+  transition: opacity 0.3s ease;
 
   &.hidden {
-    /* opacity: 0; */
-    /* animation: opacity 0.3s; */
+    opacity: 0;
   }
 
   ul.toc {
