--- a/templates/header.html
+++ b/templates/header.html
@@ -8,6 +8,8 @@
 <script type="text/javascript" src="/js/vendor/jquery.js"/>
 <script type="text/javascript" src="/js/vendor/jquery.mobile.custom.min.js"/>
 <script type="text/javascript" src="/js/vendor/modernizr.js"/>
+<script type="text/javascript" src="/js/vendor/mobile-detect.min.js"/>
+<script type="text/javascript" src="/js/vendor/mobile-detect-modernizr.js"/>
 <script type="text/javascript" src="/js/vendor/what-input.js"/>
 <script type="text/javascript" src="/js/vendor/foundation.min.js"/>
 <script type="text/javascript" src="/js/vendor/lodash.min.js"/>
