--- a/templates/index.html
+++ b/templates/index.html
@@ -20,6 +20,9 @@
         <a href="/projects/psychodata.html">psychodata</a>
       </li>
       <li>
+        <a href="/projects/fleeting-coop.html">Fleeting Cooperation</a>
+      </li>
+      <li>
         <a href="/projects/blockade.html">Plan der Wohnung von Herrn Kuharski</a>
       </li>
       <li>
