added new photo

--- a/projects/fleeting-coop.slim
+++ b/projects/fleeting-coop.slim
@@ -69,7 +69,7 @@ article.project.fleeting-coop
       p
         | Портящиеся продукты были розданы членам кооперации в качестве гонорара за их труд, остальные решено вложить в производство.
     .small-12.medium-6.columns
-      img src="/images/fleeting-coop/fleeting-coop-01.jpg"
+      img src="/images/fleeting-coop/fleeting-coop-03.png"
 
   / -
   / english version
