[fleeting-coop] changed en-version

--- a/projects/fleeting-coop.slim
+++ b/projects/fleeting-coop.slim
@@ -7,13 +7,12 @@ article.project.fleeting-coop
       | Летучая кооперация
     h4.small-12.columns
       span
-        | Николай&nbsp;Спесивцев / Настя&nbsp;Кизилова / Таня&nbsp;Эфрусси /
-          Ульяна&nbsp;Быченкова / Дина&nbsp;Жук
+        | Ульяна&nbsp;Быченкова / Дина&nbsp;Жук / Настя&nbsp;Кизилова / Николай&nbsp;Спесивцев Таня&nbsp;Эфрусси
   .description.row.expanded
     .small-12.medium-6.columns
       p
         span
-          | 27 ноября «Летучая кооперация» тестировала модель бартерного кафе &mdash; посетители приносили минимум один продукт из списка и получали за это готовую пищу. После закрытия кафе мы подсчитали нашу выручку:
+          | 27 ноября «Летучая кооперация» тестировала модель бартерного кафе&nbsp;&mdash; посетители приносили минимум один продукт из списка и получали за это готовую пищу. После закрытия кафе мы подсчитали нашу выручку:
       p
         | 6 болгарских перцев
         br
@@ -82,20 +81,19 @@ article.project.fleeting-coop
       a name="en-version"
       | Fleeting Cooperation
     h4.small-12.columns
-      | Nicolay&nbsp;Spesivtsev / Nastya&nbsp;Kizilova / Tanya&nbsp;Efrussi /
-        Uliana&nbsp;Bychenkova / Dzina&nbsp;Zhuk
+      | Uliana&nbsp;Bychenkova / Tanya&nbsp;Efrussi / Nastya&nbsp;Kizilova / Nicolay&nbsp;Spesivtsev / Dzina&nbsp;Zhuk
   .description.row.expanded
     .small-12.medium-6.columns
       p
-        | On 27 November, the "Fleeting" cooperation model tested barter cafe &mdash; visitors to bring at least one product from the list and have it ready for the food. After the closure of the cafe we calculated our proceeds:
+        | On 27 November the Fleeting cooperation tested the model of a barter cafe&nbsp;&mdash; visitors had to bring at least one product from the food list and got the ready food for it. After the closure of the cafe we have calculated our proceeds:
       p
-        | 6 Bulgarian peppers
+        | 6 bulgarian peppers
         br
-        |11 lemons
+        | 11 lemons
         br
-        |11 oranges
+        | 11 oranges
         br
-        |2 Coconut
+        | 2 Coconut
         br
         | 24 Apple
         br
@@ -103,42 +101,45 @@ article.project.fleeting-coop
         br
         | 1 Eggplant
         br
-        |23 carrots
+        | 23 carrots
         br
         | 1 celery
         br
-        | 1 DILL
+        | 1 dill
         br
         | 2 parsley
         br
-        | 2 Packs of veshenok
+        | 2 packs of pleurotus
         br
-        | 1 Pack of raisins
+        | 1 pack of raisins
         br
-        | 1 Pack of chickpeas
+        | 1 pack of chickpeas
         br
-        | 7 Packs of rice
+        | 7 packs of rice
         br
-        | 3 Packs of sugar
+        | 3 packs of sugar
         br
-        | 2 Packs of flour
+        | 2 packs of flour
         br
-        | 1 Packet of butter
+        | 1 packet of butter
         br
-        | 1 Bottle of sunflower oil
+        | 1 bottle of sunflower oil
         br
-        | 2 Zhmenʹki Sesame
+        | 2 fists of sesame
         br
-        | 1 Packet of couscous
+        | 1 packet of couscous
         br
-        | 1 Pack of beans
+        | 1 pack of beans
         br
-        | 2 Bottles of milk
+        | 2 bottles of milk
         br
-        | 1 Bottle of animals
+        | 1 bottle of keefir
         br
         | 7 eggs
+        br
+        | 1 dish of homemade cottage cheese
+        br
       p
-        | Tupperware homemade cottage cheese perishable products were distributed to the members of the cooperatives as a fee for their work, the others decided to invest in the production.
+        | Perishable products were distributed between the members of the Fleeting cooperative as a fee for their work, the other products were saved to invest in the future production.
     .small-12.medium-6.columns
       img src="/images/fleeting-coop/fleeting-coop-02.jpg"
