--- a/projects/fleeting-coop.slim
+++ b/projects/fleeting-coop.slim
@@ -7,7 +7,7 @@ article.project.fleeting-coop
       | Летучая кооперация
     h4.small-12.columns
       span
-        | Ульяна&nbsp;Быченкова / Дина&nbsp;Жук / Настя&nbsp;Кизилова / Николай&nbsp;Спесивцев Таня&nbsp;Эфрусси
+        | Ульяна&nbsp;Быченкова / Дина&nbsp;Жук / Настя&nbsp;Кизилова / Николай&nbsp;Спесивцев / Таня&nbsp;Эфрусси
   .description.row.expanded
     .small-12.medium-6.columns
       p
