[fleeting-coop] more accurate design

--- a/projects/fleeting-coop.slim
+++ b/projects/fleeting-coop.slim
@@ -83,7 +83,9 @@ article.project.fleeting-coop
     h4.small-12.columns
       | Uliana&nbsp;Bychenkova / Tanya&nbsp;Efrussi / Nastya&nbsp;Kizilova / Nicolay&nbsp;Spesivtsev / Dzina&nbsp;Zhuk
   .description.row.expanded
-    .small-12.medium-6.columns
+    .small-12.show-for-small.hide-for-large.medium-12.columns
+      img src="/images/fleeting-coop/fleeting-coop-02.jpg"
+    .small-12.medium-12.large-6.columns
       p
         | On 27 November the Fleeting cooperation tested the model of a barter cafe&nbsp;&mdash; visitors had to bring at least one product from the food list and got the ready food for it. After the closure of the cafe we have calculated our proceeds:
       p
@@ -141,5 +143,5 @@ article.project.fleeting-coop
         br
       p
         | Perishable products were distributed between the members of the Fleeting cooperative as a fee for their work, the other products were saved to invest in the future production.
-    .small-12.medium-6.columns
+    .small-12.hide-for-small.show-for-large.medium-6.columns
       img src="/images/fleeting-coop/fleeting-coop-02.jpg"
