--- a/projects/fleeting-coop.slim
+++ b/projects/fleeting-coop.slim
@@ -9,7 +9,9 @@ article.project.fleeting-coop
       span
         | Ульяна&nbsp;Быченкова / Дина&nbsp;Жук / Настя&nbsp;Кизилова / Николай&nbsp;Спесивцев / Таня&nbsp;Эфрусси
   .description.row.expanded
-    .small-12.medium-6.columns
+    .small-12.show-for-small.hide-for-large.medium-12.columns
+      img src="/images/fleeting-coop/fleeting-coop-03.png"
+    .small-12.large-6.columns
       p
         span
           | 27 ноября «Летучая кооперация» тестировала модель бартерного кафе&nbsp;&mdash; посетители приносили минимум один продукт из списка и получали за это готовую пищу. После закрытия кафе мы подсчитали нашу выручку:
@@ -67,7 +69,7 @@ article.project.fleeting-coop
         | мисочка домашнего творога
       p
         | Портящиеся продукты были розданы членам кооперации в качестве гонорара за их труд, остальные решено вложить в производство.
-    .small-12.medium-6.columns
+    .small-12.hide-for-small.show-for-large.medium-6.columns
       img src="/images/fleeting-coop/fleeting-coop-03.png"
 
   / -
