--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,9 @@
   <section class="toc-wrapper hidden">
     <ul class="toc">
       <li>
+        <a href="/projects/picnic-near-data-center.html">Picnic Near Data Center</a>
+      </li>
+      <li>
         <a href="https://paranoiapp.net">paranoiapp</a>
       </li>
       <li>
