--- a/templates/index.html
+++ b/templates/index.html
@@ -39,4 +39,8 @@
       </li>
     </ul>
   </section>
+
+  <section class="contact-email">
+    <a href="mailto:eeefff.org@gmail.com">eeefff.org@gmail.com</a>
+  </section>
 </div>
