added link to SCC project

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,12 @@
   <section class="toc-wrapper hidden">
     <ul class="toc">
       <li>
+        <a href="http://scc.eeefff.org/" target="blank">Speculative Computer Club</a>
+      </li>
+      <li>
+        <a href="http://workhardplay.pw/" target="blank">Work Hard! Play Hard!</a>
+      </li>
+      <li>
         <a href="/projects/picnic-near-data-center.html">Picnic Near Data Center</a>
       </li>
       <li>
