improved face-an-interface layout for small screens

--- a/projects/face-an-interface.slim
+++ b/projects/face-an-interface.slim
@@ -8,6 +8,8 @@ article.project.face-an-interface
       | 12.01.2017, 14:00&mdash;16:00
 
   .description.row.expanded
+    .small-12.hide-for-large.columns
+      img src="/images/face-an-interface/img-001.png"
     .small-12.large-6.columns
       p
         | When you are interacting with an artificial intelligence it is always assuming a 20 % probability that you might be someone else. Digitalized, transformed into data, the face loses all humanity.
@@ -25,5 +27,5 @@ article.project.face-an-interface
         | Habelschwerdter Allee 45
         br
         | Room JK 31/125
-    .small-12.large-6.columns.end
+    .small-12.hide-for-small.show-for-large.large-6.columns.end
       img src="/images/face-an-interface/img-001.png"
