added authors to obj

--- a/projects/obj.slim
+++ b/projects/obj.slim
@@ -2,6 +2,8 @@ article.project.obj
   .header.row.expanded
     h1.small-12.columns
       | OBJ | ОБЖ
+    h4.small-12.columns
+      | Дина&nbsp;Жук / Семен&nbsp;Кац / Николай&nbsp;Спесивцев
   .description.row.expanded
     .small-12.medium-6.large-6.columns
       p
