--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
         <a href="/projects/picnic-near-data-center.html">Picnic Near Data Center</a>
       </li>
       <li>
-        <a href="/projects/expedition-through-it-infrastructure.html">Expedition. through IT infrastructure</a>
+        <a href="/projects/expedition-through-it-infrastructure.html">Expedition through IT infrastructure</a>
       </li>
       <li>
         <a href="https://paranoiapp.net">paranoiapp</a>
