added link to myfutures.trade

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,9 @@
   <section class="toc-wrapper hidden">
     <ul class="toc">
       <li>
+        <a href="http://myfutures.trade/" target="blank">myfutures.trade</a>
+      </li>
+      <li>
         <a href="http://scc.eeefff.org/" target="blank">Speculative Computer Club</a>
       </li>
       <li>
