--- a/templates/index.html
+++ b/templates/index.html
@@ -8,46 +8,49 @@
   <section class="toc-wrapper hidden">
     <ul class="toc">
       <li>
-        <a href="http://myfutures.trade/" target="blank">myfutures.trade</a>
+        <a href="http://sws.eeefff.org/" target="_blank">Simultaneous Work Sessions</a>
       </li>
       <li>
-        <a href="http://scc.eeefff.org/" target="blank">Speculative Computer Club</a>
+        <a href="http://myfutures.trade/" target="_blank">myfutures.trade</a>
       </li>
       <li>
-        <a href="http://workhardplay.pw/" target="blank">Work Hard! Play Hard!</a>
+        <a href="http://scc.eeefff.org/" target="_blank">Speculative Computer Club</a>
       </li>
       <li>
-        <a href="/projects/picnic-near-data-center.html">Picnic Near Data Center</a>
+        <a href="http://workhardplay.pw/" target="_blank4">Work Hard! Play Hard!</a>
       </li>
       <li>
-        <a href="/projects/expedition-through-it-infrastructure.html">Expedition through IT infrastructure</a>
+        <a href="/projects/picnic-near-data-center.html" target="_blank">Picnic Near Data Center</a>
       </li>
       <li>
-        <a href="https://paranoiapp.net">paranoiapp</a>
+        <a href="/projects/expedition-through-it-infrastructure.html" target="_blank">Expedition through IT infrastructure</a>
       </li>
       <li>
-        <a href="/projects/cat-scout.html">Cat scout</a>
+        <a href="https://paranoiapp.net" target="_blank">paranoiapp</a>
       </li>
       <li>
-        <a href="/projects/obj.html">OBJ</a>
+        <a href="/projects/cat-scout.html" target="_blank">Cat scout</a>
       </li>
       <li>
-        <a href="/projects/psychodata.html">psychodata</a>
+        <a href="/projects/obj.html" target="_blank">OBJ</a>
       </li>
       <li>
-        <a href="/projects/fleeting-coop.html">Fleeting Cooperation</a>
+        <a href="/projects/psychodata.html" target="_blank">psychodata</a>
       </li>
       <li>
-        <a href="/projects/blockade.html">Plan der Wohnung von Herrn Kuharski</a>
+        <a href="/projects/fleeting-coop.html" target="_blank">Fleeting Cooperation</a>
       </li>
       <li>
-        <a href="/projects/weissensee.html">Weissensee Lake advertisement</a>
+        <a href="/projects/blockade.html" target="_blank">Plan der Wohnung von Herrn Kuharski</a>
       </li>
       <li>
-        <a href="/projects/strawberry.html">Strawberry beach</a>
+        <a href="/projects/weissensee.html" target="_blank">Weissensee Lake advertisement</a>
       </li>
       <li>
-        <a href="/projects/mobile-agitator.html">Mobile agitator</a>
+        <a href="/projects/strawberry.html" target="_blank">Strawberry beach</a>
+      </li>
+      <li>
+        <a href="/projects/mobile-agitator.html" target="_blank">Mobile agitator</a>
       </li>
     </ul>
   </section>
