--- a/templates/header.html
+++ b/templates/header.html
@@ -4,6 +4,7 @@
 <title>EEEFFF.ORG - $title$</title>
 
 <link href="/css/app.css" rel="stylesheet" type="text/css"  />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/motion-ui/1.1.1/motion-ui.min.css" />
 
 <script type="text/javascript" src="/js/vendor/jquery.js"/>
 <script type="text/javascript" src="/js/vendor/jquery.mobile.custom.min.js"/>
@@ -11,7 +12,9 @@
 <script type="text/javascript" src="/js/vendor/mobile-detect.min.js"/>
 <script type="text/javascript" src="/js/vendor/mobile-detect-modernizr.js"/>
 <script type="text/javascript" src="/js/vendor/what-input.js"/>
+<script type="text/javascript" src="/js/vendor/motion-ui.min.js"/>
 <script type="text/javascript" src="/js/vendor/foundation.min.js"/>
+<script type="text/javascript" src="/js/vendor/foundation.orbit.js"/>
 <script type="text/javascript" src="/js/vendor/lodash.min.js"/>
 <script type="text/javascript" src="/js/vendor/d3-queue.js"/>
 <script type="text/javascript" src="/js/app.js"/>
