addec cloud bushes

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,9 @@
   <section class="toc-wrapper hidden">
     <ul class="toc">
       <li>
+        <a href="http://bushes.eeefff.org/" target="_blank">Cloud Bushes: Fermenting the digital platforms</a>
+      </li>
+      <li>
         <a href="http://sws.eeefff.org/" target="_blank">Simultaneous Work Sessions</a>
       </li>
       <li>
@@ -26,7 +29,7 @@
         <a href="/projects/expedition-through-it-infrastructure.html" target="_blank">Expedition through IT infrastructure</a>
       </li>
       <li>
-        <a href="https://paranoiapp.net" target="_blank">paranoiapp</a>
+        <a href="http://paranoiapp.net" target="_blank">paranoiapp</a>
       </li>
       <li>
         <a href="/projects/cat-scout.html" target="_blank">Cat scout</a>
