--- a/css/app.scss
+++ b/css/app.scss
@@ -20,7 +20,6 @@
 @include foundation-sticky;
 @include foundation-top-bar;
 @include foundation-orbit;
-@include foundation-flex-video;
 
 
 @import "index";
@@ -46,6 +45,8 @@
 @import "expedition_through_it_infrastructure";
 
 @import "flcoop_documenta";
+
+@import "platform-perplex";
 
 /* @import "slick"; */
 /* @import "slick-theme"; */
