added OG meta tags

--- a/templates/header.html
+++ b/templates/header.html
@@ -1,6 +1,12 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
+<meta property="og:title" content="EEEFFF.ORG - $title$"/>
+
+$if(og_image_url)$
+<meta property="og:image" content="$og_image_url$">
+$endif$
+
 <title>EEEFFF.ORG - $title$</title>
 
 <link href="/css/app.css" rel="stylesheet" type="text/css"  />
