[platform-perplex] added page things

--- a/platform-perplex/index.slim
+++ b/platform-perplex/index.slim
@@ -6,17 +6,22 @@ og_image_url: /images/platform-perplex/og-image.jpg
 header.platform-perplex
   .cover.under-bottom
     | &nbsp;
+  / .live
+  /   .live-content
+  /     .stream.responsive-embed.widescreen
+  /       iframe width="560" height="315" src="https://www.youtube.com/embed/XkhJOkzIhLI" frameborder="0" gesture="media" allowfullscreen
+
 
   .cover.bottom
     | &nbsp;
 
   .cover.top
     | &nbsp;
-  .cover.svg-clip-path
-    == _partial("platform-perplex/mask.html")
+  / .cover.svg-clip-path
+  /   == _partial("platform-perplex/mask.html")
   .content
     .splash
       .description
-        | 17 ноября здесь появится ссылка на онлайн-трансляцию сеанса радикальной интимности и солидарности с водителями убера, рабочими этой платформенной экономики.
+        | Сеанс завершен
     .credits
       | photo by Adéla Vosičková
