--- a/css/_platform-perplex.scss
+++ b/css/_platform-perplex.scss
@@ -128,6 +128,36 @@ header.platform-perplex {
 
   }
 
+  .live {
+    position: absolute;
+    top: 0;
+    left: 0;
+    @extend .row;
+    @extend .expanded;
+
+    width: 100%;
+    height: 100%;
+    min-width: 100%;
+    min-height: 100%;
+
+    z-index: 23;
+
+    .live-content {
+      @extend .small-12;
+      // @extend .medium-8;
+      // @extend .medium-offset-2;
+      @extend .large-offset-2;
+      @extend .large-8;
+      @extend .columns;
+      @include vertical-center;
+
+      // margin-top: 4rem;
+
+      .stream {
+      }
+    }
+  }
+
   .content {
     width: 100%;
     min-height: 100%;
