--- a/css/app.scss
+++ b/css/app.scss
@@ -7,6 +7,7 @@
 // @include motion-ui-transitions;
 // @include motion-ui-animations;
 
+@include foundation-media-object;
 @include foundation-global-styles;
 @include foundation-grid;
 @include foundation-typography;
@@ -20,7 +21,7 @@
 @include foundation-sticky;
 @include foundation-top-bar;
 @include foundation-orbit;
-
+@include foundation-responsive-embed;
 
 @import "index";
 
