--- a/templates/default.html
+++ b/templates/default.html
@@ -6,6 +6,12 @@
     $partial("templates/header.html")$
   </head>
   <body>
+    <a class="lang-switch" href="$other_lang_url$">
+      $other_lang$
+    </a>
+
+    <a class="back-to-home" href="$root_url$">𒑲</a>
+
     $body$
     <!-- <script type="text/javascript">
          jQuery(document).foundation();
