--- a/templates/header.html
+++ b/templates/header.html
@@ -1,7 +1,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
-<meta property="og:title" content="EEEFFF.ORG - $title$"/>
+<meta property="og:title" content="EEEFFF | $title$"/>
 
 $if(og_image_url)$
 <meta property="og:image" content="$og_image_url$">
@@ -12,15 +12,15 @@ $endif$
 <link href="/css/app.css" rel="stylesheet" type="text/css"  />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/motion-ui/1.1.1/motion-ui.min.css" />
 
-<script type="text/javascript" src="/js/vendor/jquery.js"/>
-<script type="text/javascript" src="/js/vendor/jquery.mobile.custom.min.js"/>
-<script type="text/javascript" src="/js/vendor/modernizr.js"/>
-<script type="text/javascript" src="/js/vendor/mobile-detect.min.js"/>
-<script type="text/javascript" src="/js/vendor/mobile-detect-modernizr.js"/>
-<script type="text/javascript" src="/js/vendor/what-input.js"/>
-<script type="text/javascript" src="/js/vendor/motion-ui.min.js"/>
-<script type="text/javascript" src="/js/vendor/foundation.min.js"/>
-<script type="text/javascript" src="/js/vendor/foundation.orbit.js"/>
-<script type="text/javascript" src="/js/vendor/lodash.min.js"/>
-<script type="text/javascript" src="/js/vendor/d3-queue.js"/>
-<script type="text/javascript" src="/js/app.js"/>
+<script type="text/javascript" src="/js/vendor/jquery.js"></script>
+<script type="text/javascript" src="/js/vendor/jquery.mobile.custom.min.js"></script>
+<script type="text/javascript" src="/js/vendor/modernizr.js"></script>
+<script type="text/javascript" src="/js/vendor/mobile-detect.min.js"></script>
+<script type="text/javascript" src="/js/vendor/mobile-detect-modernizr.js"></script>
+<script type="text/javascript" src="/js/vendor/what-input.js"></script>
+<script type="text/javascript" src="/js/vendor/motion-ui.min.js"></script>
+<script type="text/javascript" src="/js/vendor/foundation.min.js"></script>
+<script type="text/javascript" src="/js/vendor/foundation.orbit.js"></script>
+<script type="text/javascript" src="/js/vendor/lodash.min.js"></script>
+<script type="text/javascript" src="/js/vendor/d3-queue.js"></script>
+<script type="text/javascript" src="/js/app.js"></script>
